# kingpin_demo

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
DOCS/: ARCHITECTURE.md  INTENT.md  THREAT_MODEL.md
kingpin_demo/: __init__.py  cli.py  issuer.py  memory.py  proxy.py
tests/: test_governance.py
