[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kingpin-demo"
version = "0.1.0"
description = "Toy governance demo for capability leases and guarded memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kingpin-demo = "kingpin_demo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
